[B]v1.8[/B]
- Disabled Janlul, cause site is changed
- Dazsports changed streams
- Added PolePosition

[B]v1.7[/B]
- Automaticly scrap streamsites

[B]1.6.6[/B]
- Typo fix

[B]v1.6.5[/B]
- Added SOTD 4

[B]v1.6[/B]
- Fixing some stream resolving
- Added JL 7 & 8

[B]v1.5[/B]
- Updating streams

[B]v1.4[/B]
- *magic*

[B]v1.3[/B]
- Added Stream of the Day
- Added Laat Mij Maar Gaan

[B]v1.2[/B]
- Added TV-guide

[B]v1.1[/B]
- Thanks to misa2610 for correcting the typo's

[B]v1.0[/B]
- Clone of DSS