@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.nlsports" name="NL Sports" version="1.8" provider-name="XODI &amp; NLSPORTS">
+<addon id="plugin.video.nlsports" name="NL Sports" version="1.9" provider-name="XODI &amp; NLSPORTS">
 	<requires>
 		<import addon="plugin.video.veetle" version="0.3.1" optional="false"/>
 		<import addon="plugin.video.p2p-streams" version="1.1" optional="false"/>
