@@ -1,3 +1,7 @@
+[B]v1.9[/B]
+- Removed JanLul
+- changes to daz sports
+
 [B]v1.8[/B]
 - Disabled Janlul, cause site is changed
 - Dazsports changed streams
